<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
  <string name="app_name">AndroidIDE</string>
  <string name="license_jdk">AndroidIDE uses a modified build of the JDK which is licensed under the GNU General Public License v2.0. The source code and the license of the JDK is available at : </string>
  <string name="title_open_source_licenses">Open source licenses</string>
  <string name="msg_about_licensed_under">Licensed under: </string>
  <string name="about_option_email">Email</string>
  <string name="about_option_website">Website</string>
  <string name="about_footer_alternate">AndroidIDE v\u2022 %s</string>
  <string name="about_footer">AndroidIDE %1$s for %2$s</string>
  <string name="about_subtitle">Simply, an IDE for Android</string>
  <string name="msg_get_package_failed">Failed to extract package name!</string>
  <string name="msg_share_app">AndroidIDE is an Integrated Development Environment for building Android apps on your Android Smartphone. It supports :\n1. Gradle \n2. OpenJDK 17.0–22.\n3. Advanced Java auto completion\n4. XML Auto Completion \n5. Kotlin Support and much more.\n\nDownload AndroidIDE at https://androidide.com</string>
  <string name="msg_need_help">If you\'re facing issues while using AndroidIDE or with building Android Apps, you can join the Telegram Group ask for help there.\n\nYou can also send suggesstions on our email.</string>
  <string name="discuss_amp_help">Discuss &amp; help</string>
  <string name="title_github">GitHub</string>
  <string name="need_help">Need Help?</string>
  <string name="other">Other</string>
  <string name="share_with_friends">Share with Friends</string>
  <string name="ide_preferences">IDE preferences</string>
  <string name="discussions_on_telegram">Discussions on Telegram</string>
  <string name="official_tg_channel">Official Telegram Channel</string>
  <string name="msg_empty_view">I have nothing to show you…</string>
  <string name="btn_terminal">Terminal</string>
  <string name="reset">Reset</string>
  <string name="app_logs">App Logs</string>
  <string name="ide_logs">IDE Logs</string>
  <string name="label_splash_image">Splash image</string>
  <string name="get_started">Get started</string>
  <string name="msg_cannot_perform_fix">Unable to perform quick fix</string>
  <string name="msg_performing_actions">Performing code action…</string>
  <string name="msg_api_info_since">Since API %d</string>
  <string name="msg_api_info_removed">Removed in API %d</string>
  <string name="msg_api_info_deprecated">Deprecated in API %d</string>
  <string name="msg_finding_references">Finding references…</string>
  <string name="msg_finding_definition">Finding definition…</string>
  <string name="msg_no_definition">Definition not found</string>
  <string name="msg_no_references">No references found</string>
  <string name="view_diags">Diagnostics</string>
  <string name="title_installation_failed">Installation failed</string>
  <string name="get_ready_for_something_awesome">Get ready for something awesome !</string>
  <string name="msg_picked_isnt_dir">Picked file is not a directory!</string>
  <string name="msg_pick_single_file">Please choose only one directory</string>
  <string name="please_wait">Please wait for a moment …</string>
  <string name="title_device_not_supported">Device Not Supported</string>
  <string name="msg_device_not_supported">Unfortunately, your device is not supported at the moment. We are sorry for the inconvenience.\n\nSupported CPU ABIs: aarch64 and armeabi-v7a</string>
  <string name="lint">Lint</string>
  <string name="lint_debug">lintDebug</string>
  <string name="lint_release">lintRelease</string>
  <string name="build">Build</string>
  <string name="build_debug">assembleDebug</string>
  <string name="build_output">Build output</string>
  <string name="build_release">assembleRelease</string>
  <string name="lint_tasks">Lint tasks</string>
  <string name="clean_amp_build">Clean &amp; build</string>
  <string name="clean_project">Clean</string>
  <string name="create_aab">Create AAB</string>
  <string name="build_tasks">Build tasks</string>
  <string name="quick_run_debug">Quick run</string>
  <string name="msg_sync_needed">Gradle files have changed. Please rebuild your project to sync dependencies and configurations.</string>
  <string name="preparing">Preparing</string>
  <string name="preparing_first">Preparing. First build may take up to 10–15 minutes!</string>
  <string name="msg_installing_gradlew">Gradle Wrapper is not available!\nInstalling default one. Gradle v7.4 will be downloaded if necessary.</string>
  <string name="msg_getting_daemom_status">Getting Daemon status, please wait…</string>
  <string name="gradle_daemon_status">Gradle daemon status</string>
  <string name="title_install_apks">Install APK(s)</string>
  <string name="title_clear_output">Clear output</string>
  <string name="run">Run</string>
  <string name="gradle">Gradle</string>
  <string name="title_first_build">First Build</string>
  <string name="msg_first_build">This is the first time build after you installed AndroidIDE. First build usually takes time as Gradle downloads all dependencies and plugins. This process may take about 10–15 minutes. But this totally depends on your network connection.\n\nPlease be patient …</string>
  <string name="create_project">Create project</string>
  <string name="minimum_sdk">Minimum SDK</string>
  <string name="target_sdk">Target SDK</string>
  <string name="new_project">New project</string>
  <string name="package_name">Package name</string>
  <string name="project_app_name">App name</string>
  <string name="msg_create_new_project_greeting">Start your new awesome project!</string>
  <string name="title_confirm_open_project">Open last project?</string>
  <string name="msg_confirm_open_project">Do you want me to open last opened project? Opened project was:\n%s</string>
  <string name="group_project">Project</string>
  <string name="title_close_project">Close this project</string>
  <string name="msg_opened_project_does_not_exist">Last opened project doesn\'t exist!</string>
  <string name="msg_create_new_project">Create new project</string>
  <string name="msg_open_existing_project">Open existing project</string>
  <string name="title_confirm_project_close">Close project</string>
  <string name="msg_confirm_project_close">Are you sure you want to close this project? All started Gradle daemons will be stopped after this project is closed.</string>
  <string name="project_exists">A project with same name already exists!</string>
  <string name="template_basic">Basic Project</string>
  <string name="template_description_basic">A basic project with AppCompat Toolbar and a Floating Action Button</string>
  <string name="template_description_empty">An empty project with default toolbar. Suitable when you want to do all the basic things yourself.</string>
  <string name="template_description_navigation_drawer">Project with AppCompat Toolbar, DrawerLayout and NavigationView</string>
  <string name="template_empty">Empty project</string>
  <string name="template_navigation_drawer">Navigation drawer project</string>
  <string name="template_libgdx">LibGDX Game</string>
  <string name="template_description_libgdx">LibGDX game project set up to render an image as an example.</string>
  <string name="template_compose">Jetpack Compose</string>
  <string name="template_description_compose">Basic Jetpack Compose hello world project.</string>
  <string name="template_navigation_tabs">Bottom Navigation Activity</string>
  <string name="template_navigation_tabs_description">Creates a new activity with bottom navigation</string>
  <string name="template_tabs">Tabbed Activity</string>
  <string name="template_tabs_description">Creates a new blank activity with tabs</string>
  <string name="template_fragment_and_viewmodel">Fragment + ViewModel</string>
  <string name="template_cpp">Native C++</string>
  <string name="template_cpp_description">Creates a new project with an Empty Activity configured to use JNI</string>
  <string name="template_no_activity">No Activity</string>
  <string name="template_no_activity_description">Creates a new project without activity</string>
  <string name="save">Save</string>
  <string name="menu_find">Find</string>
  <string name="menu_find_file">Find in file</string>
  <string name="menu_find_project">Find in project</string>
  <string name="msg_search_modules">Search in modules</string>
  <string name="msg_no_modules">No modules found in project</string>
  <string name="hint_find_project_filter">Filter file extensions (optional)</string>
  <string name="msg_find_project_filter">Separated by \'|\'</string>
  <string name="msg_empty_search_query">Please enter text</string>
  <string name="msg_select_search_modules">Select modules to search</string>
  <string name="msg_searching_project">Finding in project, please wait…</string>
  <string name="view_search_results">Search results</string>
  <string name="copying_files">Copying files</string>
  <string name="writing_files">Writing files</string>
  <string name="copying_assets">Copying assets</string>
  <string name="failed_create_project_dir">Failed to create project dir!</string>
  <string name="failed_write_file">Failed to write file: %s</string>
  <string name="asset_copy_failed">Failed to copy template to storage!</string>
  <string name="cannot_create_temp">Failed to create temporary project directory!</string>
  <string name="project_created_successfully">Project created successfully!</string>
  <string name="msg_begin_project_write">Starting writing process</string>
  <string name="msg_folder_creation_failed">Failed to create folder!</string>
  <string name="msg_file_creation_failed">Failed to create file!</string>
  <string name="msg_folder_created">Folder created successfully!</string>
  <string name="msg_file_created">File created successfully!</string>
  <string name="msg_folder_exists">Folder already exists!</string>
  <string name="msg_file_exists">File already exists!</string>
  <string name="msg_invalid_name">Invalid Name!</string>
  <string name="text_create">Create</string>
  <string name="msg_can_contain_slashes">If the path contains File separator (\'/\'), then the required (parent) directories will be created if they don\'t exist.</string>
  <string name="folder_name">Folder Name</string>
  <string name="file_name">File Name</string>
  <string name="new_name">New name</string>
  <string name="new_file">New file</string>
  <string name="create_auto_layout">Create layout file automatically</string>
  <string name="new_java_class">New Java class</string>
  <string name="new_xml_resource">New XML resource</string>
  <string name="new_folder">New folder</string>
  <string name="title_confirm_delete">Confirm delete</string>
  <string name="msg_confirm_delete">Are you sure you want to delete:\n%s?</string>
  <string name="copied">Copied successfully!</string>
  <string name="msg_rename_file">Enter new name for file/folder.</string>
  <string name="renamed">Renamed successfully!</string>
  <string name="rename_failed">Unable to rename file!</string>
  <string name="deleted">Deleted successfully!</string>
  <string name="delete_failed">Unable to delete file!</string>
  <string name="copy_path">Copy path</string>
  <string name="rename_file">Rename</string>
  <string name="delete_file">Delete</string>
  <string name="file_options">File options</string>
  <string name="action_closeAll">Close all</string>
  <string name="classtype_class">Class</string>
  <string name="classtype_activity">Activity</string>
  <string name="classtype_interface">Interface</string>
  <string name="classtype_enum">Enum</string>
  <string name="undo">Undo</string>
  <string name="redo">Redo</string>
  <string name="msg_preferences">Preferences</string>
  <string name="wizard_save_location">Save location</string>
  <string name="wizard_language">Project Language</string>
</resources>