<?xml version="1.0" encoding="utf-8"?>
<menu 
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	tools:ignore="AlwaysShowAction">
	
	<item
		android:icon="@drawable/ic_undo"
		android:id="@+id/menuEditor_undo"
		android:title="@string/undo"
		app:showAsAction="always"/>
	
	<item
		android:icon="@drawable/ic_redo"
		android:id="@+id/menuEditor_redo"
		android:title="@string/redo"
		app:showAsAction="always"/>
	
	<item
		android:icon="@drawable/ic_run_outline"
		android:id="@+id/menuEditor_quickRun"
		android:title="@string/quick_run_debug"
		app:showAsAction="always"/>
	
	<item
		android:icon="@drawable/ic_run"
        android:id="@+id/menuEditor_run"
        android:title="@string/run"
		app:showAsAction="always">
		<menu>
			<item
				android:icon="@drawable/ic_run"
				android:title="@string/build_tasks"
				app:showAsAction="never">
				<menu>
					<item
						android:icon="@drawable/ic_run"
						android:id="@+id/menuEditor_runBuild"
						android:title="@string/build"
						app:showAsAction="never"/>
					<item
						android:icon="@drawable/ic_run_debug"
						android:id="@+id/menuEditor_runDebug"
						android:title="@string/build_debug"
						app:showAsAction="never"/>
					<item
						android:icon="@drawable/ic_run_release"
						android:id="@+id/menuEditor_runRelease"
						android:title="@string/build_release"
						app:showAsAction="never"/>
					<item
						android:icon="@drawable/ic_bundle"
						android:id="@+id/menuEditor_runBundle"
						android:title="@string/create_aab"
						app:showAsAction="never"/>
					<item
						android:icon="@drawable/ic_clean"
						android:id="@+id/menuEditor_runClean"
						android:title="@string/clean_project"
						app:showAsAction="never"/>
					<item
						android:icon="@drawable/ic_rebuild"
						android:id="@+id/menuEditor_runCleanBuild"
						android:title="@string/clean_amp_build"
						app:showAsAction="never"/>
				</menu>
			</item>
			<item
				android:icon="@drawable/ic_lint"
				android:title="@string/lint_tasks"
				app:showAsAction="never">
				<menu>
					<item
						android:icon="@drawable/ic_lint"
						android:id="@+id/menuEditor_lint"
						android:title="@string/lint"
						app:showAsAction="never"/>
					<item
						android:icon="@drawable/ic_run_debug"
						android:id="@+id/menuEditor_lintDebug"
						android:title="@string/lint_debug"
						app:showAsAction="never"/>
					<item
						android:icon="@drawable/ic_run_release"
						android:id="@+id/menuEditor_lintRelease"
						android:title="@string/lint_release"
						app:showAsAction="never"/>
				</menu>
			</item>
			<item
				android:icon="@drawable/ic_stop_daemons"
				android:id="@+id/menuEditor_runStopDaemons"
				android:title="@string/stop_gradle_daemons"
				app:showAsAction="never"/>
			<item
				android:icon="@drawable/ic_recreate"
				android:id="@+id/menuEditor_runRecreate"
				android:title="@string/recreate_completion_services"
				app:showAsAction="never"/>
		</menu>
	</item>
	<item
		android:icon="@drawable/ic_save"
		android:id="@+id/menuEditor_save"
		android:title="@string/save"
		app:showAsAction="ifRoom"/>
</menu>
