<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


    <ImageView
        android:id="@+id/main_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/getStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/get_started"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/primaryTextColor"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_image" />

    <TextView
        android:id="@+id/greetingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/msg_create_new_project_greeting"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/primaryTextColorLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/getStarted" />

    <Button
        android:id="@+id/create_project"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="0dp"
        android:ellipsize="end"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/msg_create_new_project"
        android:textAlignment="center"
        android:textColor="@color/primaryTextColor"
        android:textSize="14sp"
        android:textStyle="bold"
        app:icon="@drawable/ic_add"
        app:iconPadding="8dp"
        app:iconTint="@color/primaryTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/greetingText"
        app:rippleColor="@color/rippleHighlightColor" />

    <Button
        android:id="@+id/open_project"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="0dp"
        android:ellipsize="end"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/msg_open_existing_project"
        android:textAlignment="center"
        android:textColor="@color/primaryTextColor"
        android:textSize="14sp"
        android:textStyle="bold"
        app:icon="@drawable/ic_folder"
        app:iconPadding="8dp"
        app:iconTint="@color/primaryTextColor"
        app:layout_constraintStart_toStartOf="@id/create_project"
        app:layout_constraintTop_toBottomOf="@id/create_project"
        app:rippleColor="@color/rippleHighlightColor" />

    <Button
        android:id="@+id/open_terminal"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="0dp"
        android:ellipsize="end"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/btn_terminal"
        android:textAlignment="center"
        android:textColor="@color/primaryTextColor"
        android:textSize="14sp"
        android:textStyle="bold"
        app:icon="@drawable/ic_terminal"
        app:iconPadding="8dp"
        app:iconTint="@color/primaryTextColor"
        app:layout_constraintStart_toStartOf="@id/create_project"
        app:layout_constraintTop_toBottomOf="@id/open_project"
        app:rippleColor="@color/rippleHighlightColor" />

    <Button
        android:id="@+id/goto_preferences"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="0dp"
        android:ellipsize="end"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/msg_preferences"
        android:textAlignment="center"
        android:textColor="@color/primaryTextColor"
        android:textSize="14sp"
        android:textStyle="bold"
        app:icon="@drawable/ic_settings"
        app:iconPadding="8dp"
        app:iconTint="@color/primaryTextColor"
        app:layout_constraintStart_toStartOf="@id/create_project"
        app:layout_constraintTop_toBottomOf="@id/open_terminal"
        app:rippleColor="@color/rippleHighlightColor" />

<Button
        android:id="@+id/open_sdk"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="0dp"
        android:ellipsize="end"
        android:gravity="center"
        android:singleLine="true"
        android:text="SDK-Manager"
        android:textAlignment="center"
        android:textColor="@color/primaryTextColor"
        android:textSize="14sp"
        android:textStyle="bold"
        app:icon="@drawable/ic_terminal"
        app:iconPadding="8dp"
        app:iconTint="@color/primaryTextColor"
        app:layout_constraintStart_toStartOf="@id/create_project"
        app:layout_constraintTop_toBottomOf="@id/goto_preferences"
        app:rippleColor="@color/rippleHighlightColor" />
</androidx.constraintlayout.widget.ConstraintLayout>
